--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>maven-test</module>
         <module>builder-test</module>
         <module>guava-test</module>
+        <module>joda-time-test</module>
     </modules>
 
     <properties>
@@ -24,6 +25,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>joda-time</groupId>
+                <artifactId>joda-time</artifactId>
+                <version>2.8.1</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
