--- a/excel-test/pom.xml
+++ b/excel-test/pom.xml
@@ -9,16 +9,17 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>joda-time-test</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>../hadoop-test</module>
-    </modules>
+    <artifactId>excel-test</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>joda-time</groupId>
-            <artifactId>joda-time</artifactId>
+            <groupId>net.sourceforge.jexcelapi</groupId>
+            <artifactId>jxl</artifactId>
+            <version>2.6.12</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
 </project>
