--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>mybatis-test</module>
         <module>javascript-test</module>
         <module>excel-test</module>
+        <module>hbase-test</module>
     </modules>
 
     <properties>
@@ -99,6 +100,11 @@
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>${junit.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.hbase</groupId>
+                <artifactId>hbase-client</artifactId>
+                <version>1.1.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
