--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>spring-test</module>
         <module>mybatis-test</module>
         <module>javascript-test</module>
+        <module>groovy-test</module>
     </modules>
 
     <properties>
@@ -43,6 +44,11 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.codehaus.groovy</groupId>
+                <artifactId>groovy-all</artifactId>
+                <version>2.3.9</version>
             </dependency>
             <dependency>
                 <groupId>joda-time</groupId>
